--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    
     <title>Task</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script defer src="/bundle.js"></script></head>
+  <script defer src="/tasker/bundle.js"></script></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
